Change to use java 17